gccida/c3/expand_builtin_return
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return/src/builtins.c:1824:28: error: use of undeclared identifier 'machine_mode'
v9 = get_mode_alignment( ( machine_mode)v8) >> 3; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return/src/builtins.c:1827:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_REG( ( machine_mode)v8, v2); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return/src/builtins.c:1828:30: error: use of undeclared identifier 'machine_mode'
v6 = adjust_address_1( v1, ( machine_mode)v8, v4, 1, 1); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_return/src/obj/builtins.o] Error 1
